@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * fix error parsing for Fitbit (thanks to https://github.com/danmana)
+
 [5.4.0]
  * fix missing support for scope for refresh_token grant_type (thanks to https://github.com/tlxtellef)
  * add email field to VKOAuth2AccessToken (thanks to https://github.com/grouzen)
